trunk/Archive2/17/e63b975756add0/output
main.cpp: In function 'int main()':
main.cpp:7:45: error: invalid conversion from 'const char*' to 'size_t {aka long unsigned int}' [-fpermissive]
     snprintf(buf, "%d-blah_%d-blah_%N", i, j);
                                             ^
main.cpp:7:45: error: invalid conversion from 'int' to 'const char*' [-fpermissive]
